# HW2_7

./: README.md
students/: Dockerfile  README.md  pyproject.toml
students/students/: alembic.ini  models.py  my_select.py  requirements.txt  seed.py
students/students/alembic/versions/: 3e9a8d4d0136_initial_migration.py
